--- a/Pagina-principal/estilo/estilo_index.css
+++ b/Pagina-principal/estilo/estilo_index.css
@@ -35,8 +35,25 @@ main h1 {
 
 }
 
-main article {
+main article{
+  background-color: white;
+  height: 50px;
+  width: 420px;
+  border-top-right-radius: 10;
+  border-bottom: 10px;
+}
 
+main article > h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: justify;
+  margin: 0px;
+}
+
+main img { 
+  border-radius: 10px;
+  width: 420px;
+  padding: 0%;
+  
 }
 
 footer { 
