--- a/Pagina-principal/estilo/estilo_index.css
+++ b/Pagina-principal/estilo/estilo_index.css
@@ -16,44 +16,87 @@
   --cor5: #063d1e;
 }
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background-color: var(--cor0);
 }
 
 header {
-  background-image: -moz-linear-gradient(to bottom, var(var --cor3), var(--cor5));
+  background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
   min-height: 150px;
   text-align: center;
   padding-top: 40px;
 }
 
-main {
+header > h1 {
+  color: white;
+  font-family: var(--fonte-destaque);
+  margin-bottom: 20px;
+  font-size: 3em;
+  text-shadow: 2px 2px 0px rgb(27, 27, 27);
+  font-weight: normal;
+}
 
+header > p {
+  margin-bottom: 20px;
+  font-family: var(--fonte-padrao);
+  font-size: 1.2em;
+  color: white;
+  max-width: 500px;
+  margin: auto;
+  padding-right: 10px;
+  padding-left: 10px;
+  text-shadow: 2px 2px 0px rgb(27, 27, 27);
+}
+
+nav {
+  background-color: var(--cor5);
+  padding: 10px;
+  box-shadow: 0px 7px 7px rgb(26, 26, 26);
+
+}
+
+nav > a {
+  color: var(--cor1);
+  padding: 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  transition-duration: 0.5s;
+}
+
+nav > a:hover{
+  background-color: var(--cor3);
+  color: var(--cor5);
+}
+
+main {
+  padding: 20px;
+  max-width: 1000px;
+  min-width: 300px;
+  margin: auto;
+  margin-bottom: 30px;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgb(27, 27, 27);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 main h1 {
-
+  text-align: center;
+  line-height: 2em;
+  font-weight: bold;
 }
 
-main article{
-  background-color: white;
-  height: 50px;
-  width: 420px;
-  border-top-right-radius: 10;
-  border-bottom: 10px;
-}
-
-main article > h2 {
-  font-family: Arial, Helvetica, sans-serif;
+main p {
+  font-weight: bold;
+  text-indent: 30px;
+  line-height: 2em;
   text-align: justify;
-  margin: 0px;
-}
-
-main img { 
-  border-radius: 10px;
-  width: 420px;
-  padding: 0%;
-  
 }
 
 footer { 
